compiler-core/parsing/tests/snapshots/parser__module_export_comma_error.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..52
      ModuleHeader@0..51
        MODULE@0..6 "module"
        ModuleName@6..29
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..29 "ModuleExportCommaError"
        ExportList@29..45
          Annotation@29..30
            TEXT@29..30 " "
          LEFT_PARENTHESIS@30..31 "("
          ExportValue@31..36
            LOWER@31..36 "hello"
          COMMA@36..37 ","
          ERROR@37..44
            ERROR@37..37 ""
            COMMA@37..38 ","
            ExportValue@38..43
              LOWER@38..43 "world"
            ERROR@43..44
              ERROR@43..43 ""
              COMMA@43..44 ","
          RIGHT_PARENTHESIS@44..45 ")"
        Annotation@45..46
          TEXT@45..46 " "
        WHERE@46..51 "where"
      LAYOUT_START@51..51 ""
      ModuleImports@51..51
      ModuleStatements@51..51
      LAYOUT_END@51..51 ""
      Annotation@51..52
        TEXT@51..52 "\n"
      END_OF_FILE@52..52 ""
    ,
    [
        ParseError {
            offset: 37,
            position: Position {
                line: 1,
                column: 38,
            },
            message: "Unexpected tokens in export list",
        },
        ParseError {
            offset: 43,
            position: Position {
                line: 1,
                column: 44,
            },
            message: "Trailing comma",
        },
    ],
)
