compiler-core/parsing/tests/snapshots/parser__module_export_data_item_invalid.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..54
      ModuleHeader@0..53
        MODULE@0..6 "module"
        ModuleName@6..34
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..34 "ModuleExportDataItemI ..."
        ExportList@34..47
          Annotation@34..35
            TEXT@34..35 " "
          LEFT_PARENTHESIS@35..36 "("
          ExportType@36..46
            UPPER@36..40 "List"
            TypeItemsList@40..46
              LEFT_PARENTHESIS@40..41 "("
              ERROR@41..45
                ERROR@41..41 ""
                LOWER@41..42 "a"
                COMMA@42..43 ","
                Annotation@43..44
                  TEXT@43..44 " "
                LOWER@44..45 "b"
              RIGHT_PARENTHESIS@45..46 ")"
          RIGHT_PARENTHESIS@46..47 ")"
        Annotation@47..48
          TEXT@47..48 " "
        WHERE@48..53 "where"
      LAYOUT_START@53..53 ""
      LAYOUT_END@53..53 ""
      Annotation@53..54
        TEXT@53..54 "\n"
      END_OF_FILE@54..54 ""
    ,
    [
        ParseError {
            offset: 41,
            position: Position {
                line: 1,
                column: 42,
            },
            message: "Unexpected tokens in type items",
        },
    ],
)
