compiler-core/parsing/tests/snapshots/parser__module_export_type_operator_error_end.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..53
      ModuleHeader@0..52
        MODULE@0..6 "module"
        ModuleName@6..39
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..39 "ModuleExportTypeOpera ..."
        ExportList@39..46
          Annotation@39..40
            TEXT@39..40 " "
          LEFT_PARENTHESIS@40..41 "("
          ExportTypeOperator@41..45
            TYPE@41..45 "type"
            ERROR@45..45 ""
          RIGHT_PARENTHESIS@45..46 ")"
        Annotation@46..47
          TEXT@46..47 " "
        WHERE@47..52 "where"
      LAYOUT_START@52..52 ""
      ModuleImports@52..52
      ModuleStatements@52..52
      LAYOUT_END@52..52 ""
      Annotation@52..53
        TEXT@52..53 "\n"
      END_OF_FILE@53..53 ""
    ,
    [
        ParseError {
            offset: 45,
            position: Position {
                line: 1,
                column: 46,
            },
            message: "Expected OPERATOR_NAME",
        },
    ],
)
